engine/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_required_fallback_prompt.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Couldn't set up your sandbox with Administrator permissions

  Your organization requires the default sandbox before Hexa Engine can continue.
  Learn more <https://developers.openai.com/codex/windows>

› 1. Try setting up admin sandbox again
  2. Quit

  Press enter to confirm or esc to go back
